feat: add material and install scss

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,9 @@
   "projects": {
     "very-security-house": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+    
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -25,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -84,6 +87,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
