feat: create guard and service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,12 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
+      "@core/*": ["src/app/core/*"],
       "@models/*": ["src/app/shared/models/*"],
       "@pages/*": ["src/app/pages/*"],
-      "@services/*": ["src/app/services/*"],
+      "@services/*": ["src/app/core/services/*"],
       "@shared/*": ["src/app/shared/*"],
+      "@components/*": ["src/app/shared/components/*"],
     },
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
